<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="MainActivity"
    android:layout_marginTop="?attr/actionBarSize"
    tools:showIn="@layout/activity_main"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/top_title"
        android:text="Title here - Title here"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="TEXT"
        android:textStyle="italic"
        android:id="@+id/description_title"
        android:layout_below="@+id/top_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/art_image"
        android:minHeight="250dp"
        android:minWidth="180dp"
        android:maxWidth="150dp"
        android:maxHeight="250dp"
        android:background="@drawable/image_art_placeholder"
        android:layout_below="@+id/description_title"
        android:layout_above="@+id/song_name"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_centerInParent="true"
        android:layout_above="@+id/channels_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center_horizontal"
        android:textStyle="italic"
        android:id="@+id/song_name"
        android:text="Song title  -:- More details here"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:id="@+id/channels_layout"
        android:layout_above="@+id/button"
        android:padding="2dp"
        android:layout_margin="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/channel_one"
            android:layout_width="0dp"
            android:textSize="10sp"
            android:textColor="@android:color/white"
            android:background="@drawable/channel_button_effect"
            android:padding="2dp"
            android:text="@string/channel_1"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/channel_two"
            android:layout_width="0dp"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:background="@drawable/channel_button_effect"
            android:padding="2dp"
            android:text="@string/channel_2"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/channel_three"
            android:layout_width="0dp"
            android:background="@drawable/channel_button_effect"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:padding="2dp"
            android:text="@string/channel_3"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/channel_four"
            android:layout_width="0dp"
            android:textSize="10sp"
            android:background="@drawable/channel_button_effect"
            android:textColor="@android:color/white"
            android:padding="2dp"
            android:text="@string/channel_4"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/channel_five"
            android:layout_width="0dp"
            android:textSize="10sp"
            android:background="@drawable/channel_button_effect"
            android:textColor="@android:color/white"
            android:padding="2dp"
            android:text="@string/channel_5"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/button"
        android:background="@mipmap/play"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:padding="2dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_toLeftOf="@+id/top_title"
        android:layout_toStartOf="@+id/top_title"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
